--- a/MovieShopMVC/Views/Home/Index.cshtml
+++ b/MovieShopMVC/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@model IEnumerable<ApplicationCore.Models.MovieCardModel>
 
-@foreach (var movie in Model)
-{
-    <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Id">
-        <img src="@movie.PosterURL" alt="@movie.Title"/>
-    </a>
-} 
+
+
+<div class="rounded">
+    <div class="container-fluid">
+        <div class="row">
+            
+    @foreach (var movie in Model)
+    {
+        <partial name="_MovieCard" model="movie"/>
+    }
+
+        </div>
+    </div>
+</div>
+
